<resources>
    <string name="app_name">Date</string>
    <string name="step4_label">Step4：请选择您想预约的会议室地点</string>
    <string name="step3_label">Step3：请选择你所需要的特殊条件</string>
    <string name="step2_label">Step2：请选择您想要与会的人员</string>
    <string name="step1_label">Step1：请选择您想要举办会议的时间</string>
    <string name="hint_date_label">当前日期：2018-11-30</string>
    <string name="hint_time_label">14:00</string>
    <string name="Empty_Member_label">暂无人员</string>
    <string name="hint_selected_member_label">已选择0人</string>
    <string name="projector_label">投影仪</string>
    <string name="round_table_label">圆桌</string>
    <string name="stage_label">舞台</string>
    <string name="hint_recommend_room_label">系统推荐：X2312,x2316</string>
    <string name="home_label">首页</string>
    <string name="meeting_room_label">会议室</string>
    <string name="personal_label">我的</string>
    <string name="register_organization_label">注册组织</string>
    <string name="join_organization">加入组织</string>
    <string name="get_back_pwd_label">找回密码</string>
    <string name="tel_label">手机号</string>
    <string name="admin_label">admin</string>
    <string name="upload_face_label">上传人脸</string>
    <string name="verification_label">验证</string>
    <string name="new_pwd_label">新的密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="get_back_pwd">找回</string>
    <string name="my_organization_label">我的组织</string>
    <string name="notice_label">公告</string>
    <string name="hint_notice_label">暂无公告</string>
    <string name="my_future_meeting_label">我即将参加的会议</string>
    <string name="my_past_meeting_label">我参加过的会议</string>
    <string name="hint_search_label">请输入您想要加入的组织名</string>
    <string name="search_label">搜索</string>
    <string name="logo_label">logo</string>
    <string name="hint_user_label">请输入您的用户名</string>
    <string name="hint_pwd_label">请输入您的密码</string>
    <string name="login_label">登陆</string>
    <string name="register_user_label">注册</string>
    <string name="login_by_face_label">刷脸登陆</string>
    <string name="forget_pwd_label">忘记密码</string>
    <string name="hint_username_label">张小三</string>
    <string name="hint_lv_label">LV.5</string>
    <string name="system_setting_label">系统设置</string>
    <string name="personal_info_update_label">个人信息修改</string>
    <string name="my_message_label">我的消息</string>
    <string name="my_organization_info">我的组织详情</string>
    <string name="book_room_label">预约会议室</string>
    <string name="look_room_label">检视会议室</string>
    <string name="my_joined_meeting">我参加的会议</string>
    <string name="my_created_meeting_label">我发起的会议</string>
    <string name="my_null">null</string>
    <string name="icon">icon</string>
    <string name="user_face_dsp">user`s face</string>
    <string name="ui_dsp">ui</string>
    <string name="version_and_feedback_label">版本信息与反馈</string>
    <string name="logout_label">注销</string>
    <string name="exit_label">退出</string>
    <string name="register_new_user_label">注册新用户</string>
    <string name="username_label">姓 名</string>
    <string name="send_verification_code_label">发送验证码</string>
    <string name="pwd_label">密 码</string>
    <string name="verification_code">验证码</string>
    <string name="finish_register_label">完成注册</string>
    <string name="organization_name_label">公司名</string>
    <string name="hint_organization_label">请输入您的公司名</string>
    <string name="logo">上传公司logo</string>
    <string name="example_time_label">2018-11-30 14:00</string>
    <string name="example_room_label">X9422</string>
    <string name="example_meeting_label">软件学科课程评估会议</string>
    <string name="see_meeting_record_label">查看会议记录</string>
    <string name="example_organization_label">西南交通大学</string>
    <string name="example_organization_info_label">    西南交通大学（Southwest Jiaotong University）是中华人民共和国教育部直属，并由教育部、中国铁路总公司、四川省和成都市共建的全国重点大学，是首批进入国家“双一流”“211工程”“985工程优势学科创新平台”“111计划”“2011计划”</string>
    <string name="order_label">预约</string>
    <string name="brief_introduction_label">简介</string>
    <string name="organization_label">我的组织名片</string>
    <string name="basic_info_label">基本情况</string>
    <string name="example_info_label">法人代表:王大川\n注册时间:2018-12-12\n现有人数:200人\n会议室总数:20</string>
    <string name="now_version_label">当前版本</string>
    <string name="example_version_label">1.0测试版</string>
    <string name="example_update_time_label">更新日期：2018/12/14</string>
    <string name="feedback_label">反馈</string>
    <string name="hint_feedback_label">请在此输入您在软件中遇到的问题，以便我们在今后的版本中改进，使您更方便快捷地使用我们的产品。</string>
    <string name="commit_label">提交</string>
    <string name="version_update_info_label">更新公告：暂无公告</string>
    <string name="remember_pwd_label">记住密码</string>
    <string name="accept_message_label">接受会议通知</string>
    <string name="auto_login_label">自动登录</string>
    <string name="holiday_model_label">节假日模式</string>
    <string name="exit_organization_label">退出组织</string>
    <string name="order_confirm_label">预约信息确认</string>
    <string name="example_message_from_label">陈超凡：</string>
    <string name="example_message_text_label">领导您好，我明天的会议由于家里有婚事想向您请个假。望批准。</string>
    <string name="last_page_label">上一页</string>
    <string name="next_page_label">下一页</string>
    <string name="step5_label">Step5：请填写会议通知的内容</string>
    <string name="my_attend_label">我的签到</string>
    <string name="Empty_room_label">未选择会议室</string>
    <string name="label_my_sign">我的签到</string>
    <string name="label_present">PRESENT</string>
    <string name="label_absent">ABSENT</string>
    <string-array name="rooms">

    </string-array>
</resources>





