<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="top"
    android:background="@color/White">
    <TextView
        style="@style/MyTextView"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"
        android:text="@string/version_and_feedback_label" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_heightPercent="90%"
        app:layout_widthPercent="100%"
        android:layout_gravity="bottom">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="20dp"
                android:contentDescription="@string/my_null"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/github_logo"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:textSize="18sp"
                    android:layout_gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/now_version_label"/>
                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Gray"/>
                <TextView
                    android:textSize="15sp"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_version_label"/>
                <TextView
                    android:textSize="15sp"
                    android:layout_gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/example_update_time_label"/>
                <TextView
                    android:textSize="15sp"
                    android:layout_gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/version_update_info_label"/>
                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Gray"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/feedback_label"/>
                <EditText
                    android:inputType="text"
                    android:textSize="15sp"
                    android:background="@color/Gray"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:hint="@string/hint_feedback_label"
                    />
                <Button
                    style="@style/MyButton"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/commit_label"/>
            </LinearLayout>
            <View

                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.percent.PercentFrameLayout>
