<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/White"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Blue"
            android:textSize="30sp"
            android:text="@string/get_back_pwd_label"
            android:gravity="center"
            android:layout_margin="30dp" />
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="100%"
                android:textColor="@color/Blue"
                android:text="@string/tel_label"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:gravity="center"
                />
            <EditText
                app:layout_widthPercent="70%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:hint="@string/admin_label"/>
        </android.support.percent.PercentFrameLayout>
        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_face_label"
            android:textColor="@color/Blue"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/Transparent"
            android:drawableTop="@drawable/camera"
            />
        <Button
            style="@style/MyButton"
            android:text="@string/verification_label"/>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="100%"
                android:textColor="@color/Blue"
                android:text="@string/new_pwd_label"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:gravity="center"
                />
            <EditText
                app:layout_widthPercent="70%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:hint="@string/admin_label"/>
        </android.support.percent.PercentFrameLayout>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                app:layout_widthPercent="30%"
                app:layout_heightPercent="100%"
                android:textColor="@color/Blue"
                android:text="@string/confirm_pwd"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:gravity="center" />
            <EditText
                app:layout_widthPercent="70%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:hint="@string/admin_label"/>
        </android.support.percent.PercentFrameLayout>
        <Button
            style="@style/MyButton"
            android:text="@string/get_back_pwd"/>
    </LinearLayout>
</ScrollView>

