<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="end|center_vertical"
        app:layout_widthPercent="65%"
        app:layout_heightPercent="80%"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_organization_label"
            android:textSize="20sp"
            android:textColor="@color/White" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_organization_info_label"
            android:textSize="15sp"
            android:textColor="#dddddd" />
    </LinearLayout>
    <ImageView
        android:contentDescription="@string/logo_label"
        android:layout_gravity="start|center_vertical"
        app:layout_widthPercent="30%"
        app:layout_heightPercent="80%"
        android:src="@drawable/firm_log" />
</android.support.percent.PercentFrameLayout>