<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_gravity="top"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="90%"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:text="@string/register_organization_label"
            android:gravity="center"
            android:layout_margin="30dp"/>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                app:layout_widthPercent="30%"
                app:layout_heightPercent="100%"
                android:textColor="@color/White"
                android:text="@string/organization_name_label"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:gravity="center"
                android:background="@color/Transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="text"
                app:layout_widthPercent="70%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:background="@color/Transparent"
                android:hint="@string/hint_organization_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.percent.PercentFrameLayout>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/White"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/Transparent"
        android:drawableTop="@drawable/camera"
        android:id="@+id/button" />
    <Button
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/finish_register_label"/>
</android.support.percent.PercentFrameLayout>
