<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/White"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.percent.PercentFrameLayout
        android:orientation="vertical"
        app:layout_heightPercent="50%"
        android:layout_width="match_parent"
        >
        <Button
            android:text="@string/app_name"
            android:layout_gravity="center|center_vertical"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="30sp"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:background="@color/Transparent"
            android:gravity="center"
            android:textSize="80sp"
            android:textColor="@color/Blue"
            />
    </android.support.percent.PercentFrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="50%"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="30sp"
        android:layout_gravity="bottom"
        android:alpha="0.9"
        android:orientation="vertical">
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">
            <ImageView
                android:contentDescription="@string/my_null"
                app:layout_widthPercent="20%"
                app:layout_heightPercent="70%"
                android:layout_gravity="start|center_vertical"
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"/>
            <EditText
                android:id="@+id/edit_user"
                app:layout_widthPercent="80%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end|bottom"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Blue"
                android:hint="@string/hint_user_label"/>

        </android.support.percent.PercentFrameLayout>

        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">
            <ImageView
                android:contentDescription="@string/my_null"
                app:layout_widthPercent="20%"
                app:layout_heightPercent="70%"
                android:layout_gravity="start|center_vertical"
                android:id="@+id/img_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd"/>
            <EditText
                android:id="@+id/edit_pwd"
                app:layout_widthPercent="80%"
                app:layout_heightPercent="100%"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Blue"
                android:hint="@string/hint_pwd_label"/>

        </android.support.percent.PercentFrameLayout>
        <Button
            style="@style/MyButton"
            android:id="@+id/login"
            android:text="@string/login_label"/>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/register"
                app:layout_widthPercent="33.3%"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_user_label"
                android:background="#00000000"
                />
            <Button
                android:layout_gravity="end"
                app:layout_widthPercent="33.3%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd_label"
                android:background="#00000000"
                android:id="@+id/getbackpwd"
                />
        </android.support.percent.PercentFrameLayout>
    </LinearLayout>




</android.support.percent.PercentFrameLayout>
