<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="top"
    android:background="@color/White">
    <TextView
        style="@style/MyTextView"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"
        android:text="@string/version_and_feedback_label" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_heightPercent="90%"
        app:layout_widthPercent="100%"
        android:layout_gravity="bottom">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:background="@color/Transparent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    app:layout_widthPercent="30%"
                    app:layout_heightPercent="100%"
                    android:text="@string/username_label"
                    android:textSize="20sp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    app:layout_widthPercent="70%"
                    app:layout_heightPercent="100%"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColorHint="#aaaaaa"
                    android:hint="@string/admin_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.percent.PercentFrameLayout>
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:background="@color/Transparent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    app:layout_widthPercent="30%"
                    app:layout_heightPercent="100%"
                    android:text="@string/tel_label"
                    android:textSize="20sp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    />
                <android.support.percent.PercentFrameLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="end"
                    android:layout_height="60sp"
                    app:layout_widthPercent="70%"
                    app:layout_heightPercent="100%"
                    android:background="@color/Transparent"
                    >
                    <EditText
                        app:layout_widthPercent="70%"
                        app:layout_heightPercent="100%"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textColorHint="#aaaaaa"
                        android:hint="@string/admin_label"/>
                    <Button
                        app:layout_widthPercent="30%"
                        app:layout_heightPercent="100%"
                        android:layout_gravity="end"
                        android:text="@string/send_verification_code_label"
                        />
                </android.support.percent.PercentFrameLayout>
            </android.support.percent.PercentFrameLayout>
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:background="@color/Transparent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    app:layout_widthPercent="30%"
                    app:layout_heightPercent="100%"
                    android:text="@string/pwd_label"
                    android:textSize="20sp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    />
                <EditText
                    app:layout_widthPercent="70%"
                    app:layout_heightPercent="100%"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColorHint="#aaaaaa"
                    android:hint="@string/admin_label"/>
            </android.support.percent.PercentFrameLayout>
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:background="@color/Transparent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    app:layout_widthPercent="30%"
                    app:layout_heightPercent="100%"
                    android:text="@string/confirm_pwd"
                    android:textSize="20sp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center" />
                <EditText
                    app:layout_widthPercent="70%"
                    app:layout_heightPercent="100%"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColorHint="#aaaaaa"
                    android:hint="@string/admin_label"/>
            </android.support.percent.PercentFrameLayout>
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:background="@color/Transparent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    app:layout_widthPercent="30%"
                    app:layout_heightPercent="100%"
                    android:text="@string/verification_code"
                    android:textSize="20sp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"/>
                <EditText
                    app:layout_widthPercent="70%"
                    app:layout_heightPercent="100%"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColorHint="#aaaaaa"
                    android:hint="@string/admin_label"/>
            </android.support.percent.PercentFrameLayout>
            <Button
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_face_label"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Transparent"
                android:drawableTop="@drawable/camera" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <Button
                style="@style/MyButton"
                android:text="@string/commit_label"/>
        </LinearLayout>
    </ScrollView>
</android.support.percent.PercentFrameLayout>
